--- a/WFormMyKeyLogger/WFormMyKeyLogger.csproj
+++ b/WFormMyKeyLogger/WFormMyKeyLogger.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{7F49E784-C551-4219-8F2D-57F1652646FE}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WFormMyKyeLogger</RootNamespace>
-    <AssemblyName>WFormMyKyeLogger</AssemblyName>
+    <RootNamespace>WFormMyKeyLogger</RootNamespace>
+    <AssemblyName>WFormMyKeyLogger</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -65,6 +65,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
